<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- TITLES -->
    <string name="app_name">Task Roulette</string>
    <string name="user_title">Profile</string>
    <string name="menu_title">Menu</string>
    <string name="achievements_title">Achievements</string>
    <string name="rewards_title">Rewards</string>
    <string name="spin_title">Spin</string>
    <string name="lists_title">Tasks</string>
    <string name="create_profile">Create Profile</string>
    <string name="edit_profile">Edit Profile</string>

    <!-- MENU -->
    <string name="btn_profile">Profile Info</string>
    <string name="btn_lists">Tasks</string>
    <string name="btn_achievements">Achievements</string>
    <string name="btn_rewards">Rewards</string>
    <string name="btn_spin">Spin Wheel</string>

    <!-- LISTS -->
    <string name="btn_add_task">Add\nTask</string>
    <string name="btn_delete_task">Delete\nTask</string>
    <string name="btn_edit_task">Save\nTask</string>
    <string name="btn_complete_task">Finish\nTask</string>
    <string name="need_task_msg">Add Tasks And Complete Them To Get Chips</string>
    <string name="selection_prompt">Tasks</string>
    <string name="hour">Hours</string>
    <string name="minute">Minutes</string>

    <!-- ADD TASK -->
    <string name="btn_add">ADD</string>
    <string name="add_task_name">Enter Task Name</string>
    <string name="add_task_description">Enter Description</string>
    <string name="add_task_time">Time To Complete In Hours and Minutes (NUMBERS ONLY)</string>

    <!-- ACHIEVEMENTS -->
    <string name="earned">Earned: </string>
    <string name="description">Description</string>
    <string name="yes_no">YES/NO</string>

    <!-- REWARDS -->
    <string name="cost">Cost:&#160;</string>
    <string name="amount">Amount</string>
    <string name="but">BUY</string>
    <string name="user_chips">User Chips:&#160;</string>

    <!-- CreateProfile -->
    <string name="btn_ok">OK</string>
    <string name="age">Enter Age</string>
    <string name="name">Enter Name</string>
    <string name="sex">Enter Sex</string>

    <!-- Profile -->
    <string name="btn_view_profile">View Profile</string>
    <string name="btn_edit_profile">Edit Profile</string>
    <string name="btn_view_rewards">View Rewards</string>
    <string name="btn_view_achievements">View Achievements</string>

    <!-- EXPERIMENTAL -->
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="task">Task</string>
    <string name="empty">EMPTY</string>
</resources>
