<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/lists_add_task">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:hint="@string/add_task_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/description"
            android:hint="@string/add_task_description"
            android:layout_below="@id/name"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_to_complete"
            android:hint="@string/add_task_time"
            android:layout_below="@id/description"/>
    <EditText
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:id="@+id/task_hour"
            android:hint="@string/hour"
            android:layout_below="@id/time_to_complete"/>
    <EditText
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:id="@+id/task_minute"
            android:hint="@string/minute"
            android:layout_toRightOf="@id/task_hour"
            android:layout_below="@id/time_to_complete"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_task"
            android:id="@+id/add_task"
            android:onClick="addTask"
            android:layout_below="@id/task_hour"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>

