<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:id="@+id/edit_profile">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:id="@+id/editname"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:id="@+id/editage"
            android:layout_gravity="center_horizontal"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sex"
            android:id="@+id/editsex"
            android:layout_gravity="center_horizontal"/>
    <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_ok"
            android:id="@+id/ok"
            android:onClick="makeProfile"
            android:layout_gravity="center_horizontal"/>
</LinearLayout>