<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:id="@+id/profile">

    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="122dp"
            android:layout_height="48dp"
            android:text="@string/btn_edit_profile"
            android:id="@+id/edit_profile"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:onClick="editProfile"/>

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="122dp"
            android:layout_height="48dp"
            android:text="@string/btn_view_rewards"
            android:id="@+id/view_rewards"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/edit_profile"
            android:onClick="viewRewards"/>

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="140dp"
            android:layout_height="48dp"
            android:text="@string/btn_view_achievements"
            android:id="@+id/view_achievements"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/view_rewards"
            android:onClick="viewAchievements"/>

</RelativeLayout>