<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/achievement_item_layout">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/achievement_name"
            android:text="@string/achievements_title"
            android:textSize="40sp"
            android:textColor="@color/yellow"
            android:layout_gravity="center_horizontal" android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/earned"
            android:textSize="30sp"
            android:id="@+id/textView" android:layout_gravity="center_horizontal"
            android:layout_marginTop="38dp"
            android:layout_below="@+id/achievement_name" android:layout_alignLeft="@+id/achievement_name"
            android:layout_alignStart="@+id/achievement_name" android:layout_marginLeft="43dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/yes_no"
            android:textSize="30sp"
            android:id="@+id/achievements_yesorno"
            android:layout_alignTop="@+id/textView"
            android:layout_toRightOf="@+id/textView"
            android:layout_marginLeft="21dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="30sp"
            android:id="@+id/achievements_description" android:layout_below="@+id/textView" android:layout_centerHorizontal="true"
            android:layout_marginTop="66dp"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/achievement_image"
            android:src="@drawable/golden_star"
            android:layout_marginBottom="91dp" android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>